added project commands new, add, rm added run command shell just echos the args for now

--- a/src/ZenMake/ZenMake.Tests/ZenMake.Tests.csproj
+++ b/src/ZenMake/ZenMake.Tests/ZenMake.Tests.csproj
@@ -34,6 +34,9 @@
     <Reference Include="nunit.framework">
       <HintPath>..\..\..\packages\NUnit.2.6.3\lib\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="ServiceStack.Text">
+      <HintPath>..\..\..\packages\ServiceStack.Text.4.0.5\lib\net40\ServiceStack.Text.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -45,6 +48,7 @@
   <ItemGroup>
     <Compile Include="CommandLineParserTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CommandLineRunnerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ZenMake\ZenMake.csproj">
