--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\src\ZenMake\ZenMake.App\packages.config" />
   <repository path="..\src\ZenMake\ZenMake.Tests\packages.config" />
+  <repository path="..\src\ZenMake\ZenMake\packages.config" />
 </repositories>
