--- a/src/ZenMake/ZenMake/ZenMake.csproj
+++ b/src/ZenMake/ZenMake/ZenMake.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\..\..\packages\Newtonsoft.Json.5.0.8\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -39,10 +42,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommandLineParser.cs" />
-    <Compile Include="CommandLineArg.cs" />
+    <Compile Include="CommandLine\CommandLineParser.cs" />
+    <Compile Include="Core\CommandArgs.cs" />
+    <Compile Include="Core\ICommandArgsParser.cs" />
+    <Compile Include="Core\ListExtensions.cs" />
+    <Compile Include="ProjectFileData.cs" />
+    <Compile Include="ProjectFileExtensions.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectAddArgs.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectAddHandler.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectArgsParser.cs" />
+    <Compile Include="ProjectFile.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectRemoveArgs.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectRemoveHandler.cs" />
+    <Compile Include="CommandLine\CommandLineRunner.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectNewArgs.cs" />
+    <Compile Include="Modules\ProjectModule\ProjectNewHandler.cs" />
+    <Compile Include="Core\ICommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="CommandLineArgType.cs" />
+    <Compile Include="ProjectFileRepo.cs" />
+    <Compile Include="ProjectFileRepoExtensions.cs" />
+    <Compile Include="Modules\RunnerModule\RunnerArgs.cs" />
+    <Compile Include="Modules\RunnerModule\RunnerArgsParser.cs" />
+    <Compile Include="Modules\RunnerModule\RunnerHandler.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
