added helper for running the csc compiler app added helper class to get .net framework information added helper for building project files added skeleton for running targets: load project file =>  compile project => run targets

--- a/src/ZenMake/ZenMake/ZenMake.csproj
+++ b/src/ZenMake/ZenMake/ZenMake.csproj
@@ -43,6 +43,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLine\CommandLineParser.cs" />
+    <Compile Include="Compiling\CSharpCompilerArgs.cs" />
+    <Compile Include="Compiling\CSharpCompiler.cs" />
+    <Compile Include="Compiling\CSharpCompilerArgsBuilder.cs" />
+    <Compile Include="Compiling\CSharpCompilerResult.cs" />
+    <Compile Include="Compiling\FrameworkVersion40Info.cs" />
+    <Compile Include="Compiling\ProjectCompiler.cs" />
+    <Compile Include="Compiling\ProjectCompilerResult.cs" />
     <Compile Include="Core\CommandArgs.cs" />
     <Compile Include="Core\ICommandArgsParser.cs" />
     <Compile Include="Core\ListExtensions.cs" />
